Adicionei o primeiro teste para validar o Controller
