# controller/userController.js
@@ -6,10 +6,12 @@ exports.register = (req, res) => {
   res.status(201).json(result.user);
 };
 
+const { generateToken } = require('../service/authService');
 exports.login = (req, res) => {
   const result = userService.loginUser(req.body);
   if (result.error) return res.status(401).json({ error: result.error });
-  res.json(result.user);
+  const token = generateToken(result.user);
+  res.json({ user: result.user, token });
 };
 
 exports.getUsers = (req, res) => {
